--- a/PET/src/main/resources/static/css/Main/join.css
+++ b/PET/src/main/resources/static/css/Main/join.css
@@ -1,7 +1,10 @@
-body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
 
-input{border-radius:3px;border:1px solid lightgray}
+input, select{border-radius:3px;border:1px solid lightgray}
+
+select:focus{outline:none}
+select{color: #6F6F6F;}
+
 .jinput, input[type=password] {
     width: 100%;
     padding: 10px;
@@ -15,13 +18,7 @@ input[type=radio]{
     border: none;
 }
 
-input[type=text]:focus, input[type=password]:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
-    outline: none;
-}
-
 button {
-    background-color: #4CAF50;
     color: white;
     margin: 8px 0;
     border: none;
@@ -35,18 +32,14 @@ button:hover {
     
 }
 button:focus{
+   outline:none !important;
+   box-shadow:none;
+}
+
+button:active{
    outline:none;
 }
 
-.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-}
-
-.cancelbtn, .submitbtn {
-  float: left;
-  width: 50%;
-}
 
 .mform {
     background-color: #fefefe;
@@ -68,6 +61,10 @@ b + div{width: 100%;
     background: #f1f1f1;}
 
 /* Clear floats */
+.clearfix{
+	margin: 39px 57px;
+}
+
 .clearfix::after {
     content: "";
     clear: both;
@@ -88,4 +85,65 @@ b {
     .cancelbtn, .signupbtn {
        width: 100%;
     }
+}
+
+/* 버튼 */
+.button-5 {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: #53ca93;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JUA",sans-serif;
+  font-size: 26px;
+  justify-content: center;
+  line-height: 1;
+  margin: 0 37px;
+  min-height: 48px;
+  padding: 14px 20px;
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: 150px;
+}
+.button-5:hover {transform: translateY(-1px);}
+
+
+/* 우편번호 버튼 */
+.postb{font-size:17px;width:94px;height:17px!important; margin:0!important;  background-color: #f0c16a;}
+.postb:hover,.postb:focus {
+  background-color: #ffa826!important;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+.postb:active {background-color: #ffa826;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+/* 수정 버튼 */
+.button-5:hover,.button-5:focus {
+  background-color: #46e69e;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+.button-5:active {background-color: #46e69e;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+/* 탈퇴 버튼 */
+.signoutb{background-color: tomato;}
+.signoutb:hover,.signoutb:focus {
+  background-color: #ff5744;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+.signoutb:active {background-color: #ff5744;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
 }
