--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -9624,3 +9624,8 @@ a.text-dark:hover, a.text-dark:focus {
 .shopping_cart{font-size:19px}
 .zzim{font-size:19px;}
 .price{font-size:19px}
+input[type=text]:focus, input[type=password]:focus, select:focus {
+  box-shadow: 0 0 0 0.2rem rgba(241,197,69,.50);
+    outline: none;
+    border: none;
+}
