--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -10,6 +10,7 @@
     font-weight: normal;
     font-style: normal;
 }
+@import url(http://api.mobilis.co.kr/webfonts/css/?fontface=NanumGothicWeb); 
 
 /******* Bootstrap Theming ********/
 /*!
