--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -390,6 +390,7 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: 2rem;
+  font-family:"JUA"
 }
 
 @media (max-width: 1200px) {
@@ -9630,3 +9631,5 @@ input[type=text]:focus, input[type=password]:focus, select:focus {
     outline: none;
     border: none;
 }
+.findbtn{border-radius:10px; font-size:20px;padding:10px 20px!important;opacity: 0.8;}
+.findbtn:hover{opacity: 1;color:black;}
