1. 회원가입 절차 구현
2. 뷰단 폴더 정리

3. 비밀번호 찾기 시 임시비밀번호 메일발송 구현

--- a/PET/src/main/resources/static/css/Main/join.css
+++ b/PET/src/main/resources/static/css/Main/join.css
@@ -52,7 +52,7 @@ button:active{
 
 .mform {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 1% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     width: 550px; /* Could be more or less, depending on screen size */
     padding: 16px;
 }
@@ -67,7 +67,7 @@ hr {
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
-    background: #f1f1f1;}
+    }
 
 /* Clear floats */
 .clearfix{
