1. 커뮤니티 리스트 구현
2. 로그인 여부 확인 (회원가입, 글쓰기)

--- a/PET/src/main/resources/static/css/Main/login.css
+++ b/PET/src/main/resources/static/css/Main/login.css
@@ -68,6 +68,8 @@ body {
     font-family:'JUA';
     color:#243946;
     font-size:20px;
+    border: 1px solid #f5bdc7;
+    top:18px;
 }
 .fa-exclamation-circle{
 	font-size:22px;
