--- a/PET/src/main/resources/static/css/Community/write.css
+++ b/PET/src/main/resources/static/css/Community/write.css
@@ -11,11 +11,11 @@ select{color: #6F6F6F;}
     margin: 5px 0 22px 0;
     display: inline-block;
     background: #f5f5f5;
-    font-size: 1.3rem;
+    font-size: 1rem;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    border: none;
+    border: 0.7 solid silver;
     box-shadow: inset 0px 2px 3px rgba( 0,0,0,0.08 );
     clear: both;
 }
@@ -23,7 +23,7 @@ select{color: #6F6F6F;}
 .mform {
     background-color: #fefefe;
     margin: 1% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    width: 90%; /* Could be more or less, depending on screen size */
+    width: 80%; /* Could be more or less, depending on screen size */
     padding: 16px;
 }
 
