--- a/PET/src/main/resources/static/css/Community/write.css
+++ b/PET/src/main/resources/static/css/Community/write.css
@@ -15,9 +15,25 @@ select{color: #6F6F6F;}
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    border: 0.7 solid silver;
+    border: 0.7px solid silver;
     box-shadow: inset 0px 2px 3px rgba( 0,0,0,0.08 );
     clear: both;
+}
+
+.jtextarea{
+	width: 100%;
+    height: 430px;
+    padding: 10px;
+    margin: 5px 0 22px 0;
+    background: #f5f5f5;
+    font-size: 1rem;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 0.7px solid silver;
+    box-shadow: inset 0px 2px 3px rgba( 0,0,0,0.08 );
+    clear: both;
+    resize: none;
 }
 
 .mform {
@@ -43,7 +59,7 @@ hr {
 .clearfix{
 	position: absolute;
     left: 31.5%;
-    margin-top: 50px;
+    margin-top: 85px !important;
 }
 
 .clearfix::after {
