--- a/PET/src/main/resources/static/css/Community/list.css
+++ b/PET/src/main/resources/static/css/Community/list.css
@@ -190,12 +190,29 @@ td>input[type=text], td>textarea {
 
 /* 추천 게시글 */
 .block {
-	border: 1px solid silver;
-	padding: 6px;
+	border: 1px solid #f1d172;
+	border-radius: 3px;
+	padding: 5px 5px;
 	height: 28px;
 	overflow: hidden;
 	width: 300px;
-	font-size: 1em;
+	font-size: 15px;
+	font-weight: lighter;
+	background: #fff;
+}
+
+
+.text-count {
+	padding: 2px 5px;
+	background: #f1d172;
+	color: #fff;
+	font-weight: bold;
+	margin-right: 3px;
+	font-size:12px;
+}
+
+.fa-star {
+	color: #f1d172
 }
 
 .block ul, .block li {
