1. 커뮤니티 뷰단 수정

--- a/PET/src/main/resources/static/css/Community/list.css
+++ b/PET/src/main/resources/static/css/Community/list.css
@@ -128,7 +128,7 @@ td>input[type=text], td>textarea {
 	justify-content: center;
 	line-height: 1;
 	margin: 0 37px;
-	min-height: 42px;
+	min-height: 40px;
 	padding: 10px 18px;
 	position: relative;
 	text-decoration: none;
@@ -146,7 +146,7 @@ td>input[type=text], td>textarea {
 
 .postb {
 	width: 90px;
-	height: 17px !important;
+	height: 15px !important;
 	margin: 0 !important;
 	background-color: #f0c16a;
 }
@@ -201,14 +201,13 @@ td>input[type=text], td>textarea {
 	background: #fff;
 }
 
-
 .text-count {
 	padding: 2px 5px;
 	background: #f1d172;
 	color: #fff;
 	font-weight: bold;
 	margin-right: 3px;
-	font-size:12px;
+	font-size: 12px;
 }
 
 .fa-star {
@@ -252,4 +251,16 @@ td {
 	border: 1px solid #dfe4ed;
 	border-radius: 3px;
 	width: 45%
+}
+
+@media ( max-width : 1000px) {
+	.commu, .fa-paw {
+		font-size: 25px !important
+	}
+}
+@media ( max-width : 786px) {
+	.commu, .fa-paw {
+		font-size: 25px !important
+	}
+	.commu{display:none;}
 }
