--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -9653,3 +9653,27 @@ input[type=text]:focus, input[type=password]:focus, select:focus,textarea:focus 
 .fa-paw{font-size:28px}
 button:focus{boxshadow:none;outline:none;}
 input:focus{boxshadow:none;}
+ input[type="file"] {  /* 파일 필드 숨기기 */
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip:rect(0,0,0,0);
+  border: 0;
+}
+.mform label {
+  display: inline-block;
+  padding: .5em .75em;
+  color: #999;
+  font-size: inherit;
+  line-height: normal;
+  vertical-align: middle;
+  background-color: #fdfdfd;
+  cursor: pointer;
+  border: 1px solid #ebebeb;
+  border-bottom-color: #e2e2e2;
+  border-radius: .25em;
+}
+
