--- a/PET/src/main/resources/static/css/Community/list.css
+++ b/PET/src/main/resources/static/css/Community/list.css
@@ -10,6 +10,14 @@
 	margin: 20px auto;
 }
 
+img {
+	opacity: 1
+}
+
+img:hover {
+	opacity: 0.8
+}
+
 td>input[type=text], td>textarea {
 	background: #f5f5f5;
 	font-size: 13px;
@@ -26,14 +34,14 @@ td>input[type=text], td>textarea {
 
 .search-div {
 	position: absolute;
-	left: 28%;
+	left: 30%!important;
 }
 
 /* 페이징 css */
 .pagination-div {
 	position: absolute;
-	left: 40%;
-	top: 114%;
+	left: 42%!important;
+	top: 114%!important;
 }
 
 .pagination {
@@ -52,7 +60,7 @@ td>input[type=text], td>textarea {
 	display: block;
 	font-size: 14px;
 	text-decoration: none;
-	padding: 6px 12px;
+	padding: 6.3px 12px !important;
 	color: #fff;
 	margin-left: -1px;
 	border: 1px solid transparent;
@@ -254,7 +262,7 @@ input, select {
 }
 
 td {
-	font-size: 0.95em;
+	font-size: 1.1em;
 }
 
 .search_word {
