--- a/PET/src/main/resources/static/css/Order/orderlist.css
+++ b/PET/src/main/resources/static/css/Order/orderlist.css
@@ -43,27 +43,21 @@ th {
 	-webkit-animation: bounce 1.5s infinite;
 }
 
-@
--webkit-keyframes bounce { 0%, 20%, 50%, 80%, 100% {
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
-}
+@-webkit-keyframes 
+bounce { 
+	0%, 
+	20%, 
+	50%, 
+	80%, 
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
 
-50
-%
-{
--webkit-transform
-:
-translateY(
--5px
-);
-transform
-:
-translateY(
--5px
-);
-}
-}
+	50%{
+	-webkit-transform:translateY(-5px);
+	transform:translateY(-5px);}
+	}
 
 /* 팝업창 */
 .popup_panel1 {
@@ -108,28 +102,11 @@ translateY(
 	animation: onair_wave 2s ease-out infinite;
 }
 
-@
-keyframes onair_wave { 0% {
+@keyframes onair_wave { 
+	0% {
 	box-shadow: 0 0 0 0 rgba(20, 219, 180, 1);
 }
-100
-%
-{
-box-shadow
-:
-0
-0
-0
-12px
-rgba(
-20
-,
-219
-,
-180
-,
-0
-);
-}
+	100%{
+	box-shadow:0 0 0 12px rgba(20,219,180,0);}
 }
 ;
