--- a/PET/src/main/resources/static/css/Product/detail.css
+++ b/PET/src/main/resources/static/css/Product/detail.css
@@ -7,7 +7,7 @@
   
  p{text-align:left;font-weight:bold;}
 
-.tab > sectino > p {
+.tab > section > p {
             margin: 0 0 20px;
             line-height: 1.5;}
                 
