--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -9387,6 +9387,12 @@ a.text-dark:hover, a.text-dark:focus {
  font-size:13px !important;	
 }
 
+.text-small1 {
+	font-size: 15px !important;
+	color: #808080;
+	font-weight: lighter
+}
+
 .visible {
   visibility: visible !important;
 }
