--- a/PET/src/main/resources/static/css/Main/search_item.css
+++ b/PET/src/main/resources/static/css/Main/search_item.css
@@ -31,11 +31,11 @@
 	border-radius: 50px
 }
 
-input {
+input[type='radio'] {
 	display: none;
 }
 
-label {
+.label-tab {
 	display: inline-block;
 	padding: 15px 25px;
 	font-weight: 600;
@@ -44,7 +44,7 @@ label {
 	border-radius: 50px
 }
 
-label:hover {
+.label-tab:hover {
 	 -webkit-transform: scale(1.2);
 	cursor: pointer;
 }
