--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -9632,7 +9632,9 @@ a.text-dark:hover, a.text-dark:focus {
 .mainbody{
 	margin-top:189px;
 }
-.fa-heart{color:#e79087!important}
+.fa-heart{
+	color: #e79087!important;
+ }
 .text-heart{color:#e79087!important}
 .fa-shopping-cart{color:#64dfb7!important}
 .fa-cut{font-size:21px}
@@ -9776,4 +9778,37 @@ button.print-button:hover .print-icon::after {
 
 @media print {
     .print-button { display:none; }
+}
+.block1 {
+	border: 1px solid #EDF1FF;
+	padding: 5px 5px;
+	height: calc(1.5em + 0.85rem + 2px);
+	overflow: hidden;
+	width: 43%;
+	font-size: 15px;
+	font-weight: lighter;
+	background: #fff;
+	line-height: 1.8;
+	float:left
+}
+.block1 ul, .block1 li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-align:left !important;
+}
+.block1 li a {
+	display: block;
+	color: #555;
+	text-decoration: none;
+}
+.best_search{
+	font-size:14px;
+	padding:0 5px;
+	display:inline-block;
+	float:left;
+	height: calc(1.5em + 0.95rem + 1.9px);
+	background:#EDF1FF;
+	vertical-align:center;
+	line-height: 2.9;
 }
