--- a/PET/src/main/resources/static/css/Main/style.css
+++ b/PET/src/main/resources/static/css/Main/style.css
@@ -9660,7 +9660,7 @@ input[type=text]:focus, input[type=password]:focus, select:focus,textarea:focus 
 }
 .commu{font-family:'JUA';font-size:35px;}
 .fa-paw, .fa-camera{font-size:28px}
-.fa-star{color:#efc65e}
+.fa-star, .fa-star-half-alt{color:#efc65e}
 button:focus{boxshadow:none;outline:none;}
 input:focus{boxshadow:none;}
  input[type="file"] {  /* 파일 필드 숨기기 */
