--- a/PET/src/main/resources/static/css/Product/detail.css
+++ b/PET/src/main/resources/static/css/Product/detail.css
@@ -50,3 +50,83 @@
         #tab3:checked ~ #content3,
         #tab4:checked ~ #content4 {
             display: block;}
+            
+            /* 페이징 css */
+.pagination-div {
+	position: relative;
+	left: 46%!important;
+	top: 52%!important;
+}
+
+.pagination {
+	list-style: none;
+	padding: 0;
+	margin-top: 10px;
+}
+
+.pagination li {
+	display: inline-block;
+	text-align: center;
+}
+
+.pagination a {
+	float: left;
+	display: block;
+	font-size: 14px;
+	text-decoration: none;
+	padding: 6.3px 12px !important;
+	color: #fff;
+	margin-left: -1px;
+	border: 1px solid transparent;
+	line-height: 1.5;
+}
+
+.pagination a.active {
+	cursor: default;
+}
+
+.pagination a:active {
+	outline: none;
+}
+
+.modal-1 li:first-child a {
+	-moz-border-radius: 6px 0 0 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px 0 0 6px;
+}
+
+.modal-1 li:last-child a {
+	-moz-border-radius: 0 6px 6px 0;
+	-webkit-border-radius: 0;
+	border-radius: 0 6px 6px 0;
+}
+
+.modal-2 li:first-child a {
+	-moz-border-radius: 50px 0 0 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px 0 0 50px;
+}
+
+.modal-2 li:last-child a {
+	-moz-border-radius: 0 50px 50px 0;
+	-webkit-border-radius: 0;
+	border-radius: 0 50px 50px 0;
+}
+
+.modal-2 a {
+	border-color: #ddd;
+	color: #999;
+	background: #fff;
+}
+
+.modal-2 a:hover {
+	color: #e7cc87;
+	background-color: #eee;
+}
+
+.modal-2 a.active, .modal-2 a:active {
+	border-color: #e7cc87;
+	background: #e7cc87;
+	color: #fff;
+}
+            
